--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.rodydavis.flutter_piano">
+    package="com.appleeducate.flutter_piano">
+
     <uses-permission android:name="android.permission.VIBRATE" />
-    <application android:label="flutter_piano" android:name="${applicationName}"
+
+    <application android:label="flutter_piano"
+        android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher"
         android:localeConfig="@xml/locales_config">
         <service
@@ -26,7 +29,7 @@
         </activity>
         <meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
-            android:value="ca-app-pub-3940256099942544~3347511713"/>
+            android:value="@string/adsID"/>
         <meta-data
             android:name="flutterEmbedding" android:value="2" />
     </application>
