--- a/web/manifest.json
+++ b/web/manifest.json
@@ -11,8 +11,8 @@
   "related_applications": [
     {
       "platform": "play",
-      "url": "https://play.google.com/store/apps/details?id=com.appleeducate.flutter_piano&hl=en_US",
-      "id": "com.appleeducate.flutter_piano"
+      "url": "https://play.google.com/store/apps/details?id=piano.keyboard.pianomusic&hl=en_US",
+      "id": "piano.keyboard.pianomusic"
     },
     {
       "platform": "itunes",
