--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -60,5 +60,7 @@
 			<string>ru</string>
 			<string>zh</string>
 		</array>
+		<key>GADApplicationIdentifier</key>
+        	<string>ca-app-pub-3940256099942544~1458002511</string>
 	</dict>
 </plist>
