--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -9,7 +9,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.appleeducate.pocketpiano</string>
+	<string>piano.keyboard.pianomusic</string>
 	<key>PROJECT_ID</key>
 	<string>pianoapp-12bdc</string>
 	<key>STORAGE_BUCKET</key>
